--- a/Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
+++ b/Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
@@ -33,11 +33,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this project we need following data:\n",
-    "Tokyo data that contains list districts (Wards) along with their latitude and longitude.\n",
-    "We will Scrap Tokyo districts (Wards) Table from Wikipedia and get the coordinates of these 23 major districts using geocoder class of Geopy client.\n",
-    "Restaurants in each neighborhood of Tokyo:\n",
-    "Datasource : https://en.wikipedia.org/wiki/Special_wards_of_Tokyo#List_of_special_wards\n",
+    "For this project we need following data:<br>\n",
+    "Tokyo data that contains list districts (Wards) along with their latitude and longitude.<br>\n",
+    "We will Scrap Tokyo districts (Wards) Table from Wikipedia and get the coordinates of these 23 major districts using geocoder class of Geopy client.<br>\n",
+    "Restaurants in each neighborhood of Tokyo:<br>\n",
+    "Datasource : https://en.wikipedia.org/wiki/Special_wards_of_Tokyo#List_of_special_wards<br>\n",
     "Description : By using this API we will get all the venues in each neighborhood. We can filter these venues to get only restaurants."
    ]
   },
